[package]
name = "todo_gui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[dependencies]
iced = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "todo_gui"
path = "src/main.rs"